--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <span class="navbar-brand title">GeoJSON Dashboard</span>
+          <span class="navbar-brand title">GeoJSON Dashboard-OSMLINT</span>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
